--- a/BoricaNet/BoricaNet.csproj
+++ b/BoricaNet/BoricaNet.csproj
@@ -4,7 +4,7 @@
         <TargetFramework>netstandard2.1</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <LangVersion>latest</LangVersion>
+        <LangVersion>11</LangVersion>
         <Title>BoricaNet</Title>
         <Description>Library for borica payments</Description>
         <PackageProjectUrl>https://github.com/viktor111/BoricaNet</PackageProjectUrl>
