--- a/BoricaNet/BoricaNet.csproj
+++ b/BoricaNet/BoricaNet.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <TargetFramework>netstandard2.1</TargetFramework>
@@ -13,7 +13,7 @@
         <PackageReadmeFile>README.md</PackageReadmeFile>
         <RepositoryUrl>https://github.com/viktor111/BoricaNet</RepositoryUrl>
         <PackageTags>payment;borica;provider</PackageTags>
-        <Version>1.0.1</Version>
+        <Version>1.0.8</Version>
     </PropertyGroup>
 
     <ItemGroup>
